A1111: qairt_accelerate V1.1 release

--- a/plugins/stable-diffusion-webui/qairt_accelerate/ui-config.json
+++ b/plugins/stable-diffusion-webui/qairt_accelerate/ui-config.json
@@ -232,9 +232,9 @@
     "img2img/Tabs@img2img_extra_tabs/selected": null,
     "img2img/Tabs@mode_img2img/selected": null,
     "img2img/img2img/visible": true,
-    "img2img/sketch/visible": true,
-    "img2img/inpaint/visible": true,
-    "img2img/inpaint sketch/visible": true,
+    "img2img/sketch/visible": false,
+    "img2img/inpaint/visible": false,
+    "img2img/inpaint sketch/visible": false,
     "img2img/Input directory/visible": true,
     "img2img/Input directory/value": "",
     "img2img/Output directory/visible": true,
@@ -245,7 +245,7 @@
     "img2img/Append png info to prompts/value": false,
     "img2img/PNG info directory/visible": true,
     "img2img/PNG info directory/value": "",
-    "img2img/Resize mode/visible": true,
+    "img2img/Resize mode/visible": false,
     "img2img/Resize mode/value": "Just resize",
     "img2img/Mask blur/visible": true,
     "img2img/Mask blur/value": 4,
@@ -308,28 +308,30 @@
     "customscript/sampler.py/img2img/Sampling steps/minimum": 1,
     "customscript/sampler.py/img2img/Sampling steps/maximum": 150,
     "customscript/sampler.py/img2img/Sampling steps/step": 1,
-    "customscript/refiner.py/img2img/Refiner/visible": true,
+    "customscript/refiner.py/img2img/Refiner/visible": false,
     "customscript/refiner.py/img2img/Refiner/value": false,
-    "customscript/refiner.py/img2img/Checkpoint/visible": true,
+    "customscript/refiner.py/img2img/Checkpoint/visible": false,
     "customscript/refiner.py/img2img/Checkpoint/value": "",
-    "customscript/refiner.py/img2img/Switch at/visible": true,
+    "customscript/refiner.py/img2img/Switch at/visible": false,
     "customscript/refiner.py/img2img/Switch at/value": 0.8,
     "customscript/refiner.py/img2img/Switch at/minimum": 0.01,
     "customscript/refiner.py/img2img/Switch at/maximum": 1.0,
     "customscript/refiner.py/img2img/Switch at/step": 0.01,
-    "img2img/Width/visible": true,
+    "img2img/Resize to/visible": false,
+    "img2img/Resize by/visible": false,
+    "img2img/Width/visible": false,
     "img2img/Width/value": 512,
     "img2img/Width/minimum": 64,
     "img2img/Width/maximum": 2048,
     "img2img/Width/step": 8,
-    "img2img/Height/visible": true,
+    "img2img/Height/visible": false,
     "img2img/Height/value": 512,
     "img2img/Height/minimum": 64,
     "img2img/Height/maximum": 2048,
     "img2img/Height/step": 8,
-    "img2img/⇅/visible": true,
-    "img2img/📐/visible": true,
-    "img2img/Scale/visible": true,
+    "img2img/⇅/visible": false,
+    "img2img/📐/visible": false,
+    "img2img/Scale/visible": false,
     "img2img/Scale/value": 1.0,
     "img2img/Scale/minimum": 0.05,
     "img2img/Scale/maximum": 4.0,
@@ -339,12 +341,12 @@
     "img2img/Unused/minimum": 0,
     "img2img/Unused/maximum": 100,
     "img2img/Unused/step": 1,
-    "img2img/Batch count/visible": true,
+    "img2img/Batch count/visible": false,
     "img2img/Batch count/value": 1,
     "img2img/Batch count/minimum": 1,
     "img2img/Batch count/maximum": 100,
     "img2img/Batch count/step": 1,
-    "img2img/Batch size/visible": true,
+    "img2img/Batch size/visible": false,
     "img2img/Batch size/value": 1,
     "img2img/Batch size/minimum": 1,
     "img2img/Batch size/maximum": 8,
@@ -358,7 +360,7 @@
     "img2img/Image CFG Scale/minimum": 0,
     "img2img/Image CFG Scale/maximum": 3.0,
     "img2img/Image CFG Scale/step": 0.05,
-    "img2img/Denoising strength/visible": true,
+    "img2img/Denoising strength/visible": false,
     "img2img/Denoising strength/value": 0.75,
     "img2img/Denoising strength/minimum": 0.0,
     "img2img/Denoising strength/maximum": 1.0,
@@ -388,7 +390,7 @@
     "customscript/seed.py/img2img/Resize seed from height/step": 8,
     "img2img/Override settings/value": null,
     "img2img/Script/visible": true,
-    "img2img/Script/value": "None",
+    "img2img/Script/value": "Accelerate with Qualcomm AI Runtime",
     "customscript/img2imgalt.py/img2img/Override `Sampling method` to Euler?(this method is built for it)/visible": true,
     "customscript/img2imgalt.py/img2img/Override `Sampling method` to Euler?(this method is built for it)/value": true,
     "customscript/img2imgalt.py/img2img/Override `prompt` to the same value as `original prompt`?(and `negative prompt`)/visible": true,
@@ -813,5 +815,19 @@
     "customscript/qairt_accelerate.py/txt2img/Model to use/visible": true,
     "customscript/qairt_accelerate.py/txt2img/Model to use/value": "Stable-Diffusion-1.5",
     "customscript/qairt_accelerate.py/img2img/Model to use/visible": true,
-    "customscript/qairt_accelerate.py/img2img/Model to use/value": "Stable-Diffusion-1.5"
+    "customscript/qairt_accelerate.py/img2img/Model to use/value": "Stable-Diffusion-1.5",
+    "img2img/Tabs@img2img_batch_source/selected": null,
+    "img2img/Tabs@img2img_tabs_resize/selected": null,
+    "txt2img/Model to use/visible": true,
+    "txt2img/Model to use/value": "Stable-Diffusion-1.5",
+    "customscript/qairt_accelerate.py/img2img/Upscaler model to use/visible": true,
+    "customscript/qairt_accelerate.py/img2img/Upscaler model to use/value": "ESRGAN_4x",
+    "customscript/qairt_accelerate.py/txt2img/Upscaler model to use/value": "ESRGAN_4x",
+    "customscript/qairt_accelerate.py/txt2img/Upscale/visible": true,
+    "customscript/qairt_accelerate.py/txt2img/Upscale/value": false,
+    "txt2img/Upscaler model to use/value": "",
+    "customscript/qairt_accelerate.py/img2img/Upscale/visible": true,
+    "customscript/qairt_accelerate.py/img2img/Upscale/value": false,
+    "img2img/Upscaler model to use/visible": true,
+    "img2img/Upscaler model to use/value": ""
 }
