--- a/plugins/gimp/stable-diffusion/config/htp_backend_ext_config.json
+++ b/plugins/gimp/stable-diffusion/config/htp_backend_ext_config.json
@@ -6,7 +6,12 @@
   }],
   "devices": [
     {
-      "pd_session": "unsigned"
+      "pd_session": "unsigned",
+      "cores":[{
+          "core_id": 0,
+          "perf_profile": "burst",
+          "rpc_control_latency":100
+      }]
     }
   ]
 }
